# recfilter

./: .gitignore  .gitmodules  Doxyfile  LICENSE.txt  Makefile  Makefile.common  README.md  index.html  params.json
apps/: Makefile  Makefile.common  README.md  cpu_profile.sh  cuda_profile.sh  gaussian_weights.h  opencl_profile.sh
apps/gpu/boxFilterNPP/: CMakeLists.txt  Makefile
demo/: Makefile  README.md  demo_gaussian_filter.cpp  demo_smoothed_hist_median_filter.cpp  demo_unsharp_mask.cpp  gaussian_filter_demo.cpp  image_io.h
doc/: annotated.html  annotated.js  class_arguments.html  class_arguments.js  class_check_result.html  class_check_result.js  class_check_result_verbose.html  class_check_result_verbose.js  class_func_tag.html  class_func_tag.js  class_log.html  class_log.js  class_rec_filter.html  class_rec_filter.js  class_rec_filter_dim.html  class_rec_filter_dim.js  class_rec_filter_dim_and_causality.html  class_rec_filter_dim_and_causality.js  class_rec_filter_func.html  class_rec_filter_func.js  class_rec_filter_ref_expr.html  class_rec_filter_ref_expr.js  class_rec_filter_ref_var.html  class_rec_filter_ref_var.js  class_rec_filter_schedule.html  class_rec_filter_schedule.js  class_var_tag.html  class_var_tag.js  classes.html  coefficients_8h.html  coefficients_8h.js  coefficients_8h_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  files.html  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  (+31 more)
lib/: Makefile  args.cpp  coefficients.cpp  coefficients.h  gaussian_weights.cpp  (+27 more)
(+303 files in other folders)
